Merge Fire_Alert_URL feature
-Add AlertsController GET /fire
-Add AlertsService FireAlert() method
-Add Unit Tests and Integration Tests
-Update Alerts API Documentation